[FIX] web: fix text truncation for copy clipboard widget
The recent M3 changes to the framework changed how some fields behave.
Task 6011625 fixed how the copy field truncates text in the project module.
This commit moves the fix to web, so that it can be applied in other modules
which need it, such as calendar

Expanded the selector from the original class to cover inputs for non readonly
widgets as well.

Task-6048484

--- a/addons/project/static/src/scss/project_form.scss
+++ b/addons/project/static/src/scss/project_form.scss
@@ -34,14 +34,6 @@
     &.o_field_subtasks_one2many, &.o_field_many2many_tags_email, &.o_field_CopyClipboardChar {
         width: 100%;
     }
-    &.o_field_CopyClipboardChar span:not(.fa-clipboard) {
-        white-space: unset;
-        width: calc(100% - var(--inputbox-overlay-end-size));
-        display: block;
-        overflow: hidden;
-        text-wrap: nowrap;
-        text-overflow: ellipsis;
-    }
 }
 
 .o_project_task_kanban_view .o_kanban_quick_create .o_field_widget .o_input  {
